scripts/nullaway/original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8.txt
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:17: error: [NullAway] initializer method does not guarantee @NonNull field numLeft (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public CombinationGenerator(int n, int r) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:53: error: [NullAway] initializer method does not guarantee @NonNull fields formula (line 39), formula2 (line 40), sigma (line 47) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public WFF(String formula) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:55: error: [NullAway] initializer method does not guarantee @NonNull fields rules (line 51), world (line 53) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DefaultReasoner() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:89: error: [NullAway] initializer method does not guarantee @NonNull fields rules (line 51), world (line 53) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DefaultReasoner(WorldSet myWorld, RuleSet myRules) {
	       ^
    (see http://t.uber.com/nullaway )
4 errors
